--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-jvectormap/world": "^1.1.2",
     "@types/nprogress": "^0.2.3",
     "apexcharts": "^4.1.0",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.23.24",
