--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@tanstack/react-table": "^8.21.3",
     "@types/nprogress": "^0.2.3",
     "apexcharts": "^4.1.0",
     "axios": "^1.13.2",
@@ -34,6 +35,7 @@
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
     "react-router": "^7.1.5",
+    "sweetalert2": "^11.26.17",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
   },
